@@ -4,6 +4,7 @@
 
 ============ v1.0.8 ============
 # Fixed Git Issue #2 Autoload not correct
+# Removed the register form function because we can already use json_encode to do the same thing.
 ============ v1.0.7 ============
 # Upgraded the CodeIgniter to v2.1.0
 ============ v1.0.6 ============
